--- a/src/app/features/auth/components/signin/signin.component.html
+++ b/src/app/features/auth/components/signin/signin.component.html
@@ -9,6 +9,6 @@
   
       <button type="submit" [disabled]="loginForm.invalid">Login</button>
     </form>
-    <p>Don't have an account? <a routerLink="/signin">Sign Up</a></p>
-  </div>
+    <p>Don't have an account?<a routerLink="/signup">Register</a></p>
+</div>
   
