--- a/src/app/features/auth/components/signup/signup.component.html
+++ b/src/app/features/auth/components/signup/signup.component.html
@@ -24,6 +24,7 @@
       </div>
   
       <button type="submit" [disabled]="signUpForm.invalid">Sign Up</button>
+      <p>Already have an account?<a routerLink="/sign">Sign In</a></p>
     </form>
   </div>
   
