--- a/src/app/shared/components/product-list/product-list.component.html
+++ b/src/app/shared/components/product-list/product-list.component.html
@@ -11,8 +11,8 @@
             <p class="fw-bold text-primary">${{ product.price }}</p>
             <p>{{product.description}}</p>
             <div class="mt-auto">
-              <button class="btn btn-warning w-100 mb-2 button-cart" (click)="addToCart(product)">Add to Cart</button>
-              <button class="btn btn-secondary w-100">Buy Now</button>
+              <button class="btn btn-warning w-100 mb-2 button-cart button-spacing" (click)="addToCart(product)">Add to Cart</button>
+              <button class="btn btn-secondary w-100 button-buy">Buy Now</button>
             </div>
           </div>
         </div>
