--- a/src/app/shared/components/product-list/product-list.component.scss
+++ b/src/app/shared/components/product-list/product-list.component.scss
@@ -33,7 +33,18 @@
   .button-buy {
     @include button-style(gray, white);
   }
+
+  .button-view {
+    @include button-style(skyblue, white);
+  }
   
   
+  .high-stock {
+    color: green;
+  }
+
+  .low-stock {
+    color: red;
+  }
 
   
