--- a/src/app/features/admin/admin-home/admin-home.component.html
+++ b/src/app/features/admin/admin-home/admin-home.component.html
@@ -3,4 +3,9 @@
     (searchQueryChanged)="updateSearchChange($event)"
     (categoryChanged)="updateCategoryChange($event)"
     ></app-sidebar>
+    <app-product-list
+    [selectedCategory]="selectedCategory()"
+    [searchText] = "searchTerm()"
+    [products] = "products()"
+    ></app-product-list>
 </div>
