Data driven form and custom validators

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -8,5 +8,6 @@
     [selectedCategory]="selectedCategory()"
     [searchText] = "searchTerm()"
     [products] = "products()"
+    [show]="showAdd()"
     ></app-product-list>
 </div>
