--- a/src/app/features/admin/admin-home/admin-home.component.html
+++ b/src/app/features/admin/admin-home/admin-home.component.html
@@ -7,5 +7,6 @@
     [selectedCategory]="selectedCategory()"
     [searchText] = "searchTerm()"
     [products] = "products()"
+    [show] ="showAdd()"
     ></app-product-list>
 </div>
