--- a/src/app/features/cart/cart.component.html
+++ b/src/app/features/cart/cart.component.html
@@ -4,7 +4,6 @@
   <div class="container-fluid">
     <div class="row g-3">
       @for (product of cartItems; track product.id) {
-        <ng-container>
           <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="card h-100 shadow-sm">
               <img [src]="product.images[0]" 
@@ -24,9 +23,7 @@
                 </div>
               </div>
             </div>
-          </div>
-        </ng-container>
-      }
+          </div>      }
     </div>
   </div>
 } @else {
