--- a/src/app/features/product-details/product-details.component.html
+++ b/src/app/features/product-details/product-details.component.html
@@ -12,6 +12,7 @@
       <p><strong>Stock:</strong> {{ product.stock }}</p>
       <p class="fw-bold text-primary fs-4">${{ product.price }}</p>
       <p>{{ product.description }}</p>
+      <p appHighlight> ggg</p>
     </div>
   </div>
 </div>
